--- a/realtybroker/src/main/resources/application.yaml
+++ b/realtybroker/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
-spring:
-  h2:
-    console:
-      enabled: true
+server:
+  port: 8080
 
+spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
 
