--- a/realtybroker/pom.xml
+++ b/realtybroker/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>h2</artifactId>
             <version>2.1.210</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>10.0.14</version>
+        </dependency>
 
 
         <dependency>
