--- a/realtybroker/src/main/resources/application.yaml
+++ b/realtybroker/src/main/resources/application.yaml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  tomcat:
+    accesslog:
+      enabled: true
 
 spring:
   thymeleaf:
@@ -9,6 +12,7 @@ spring:
     url: jdbc:mariadb://127.0.0.1:3306/MOON
     username: lune6669
     password: 1234
+
 
 
 
